RESOLVED FIXED87665
[BlackBerry] http authentication challenge issue when loading favicon
https://bugs.webkit.org/show_bug.cgi?id=87665
Summary [BlackBerry] http authentication challenge issue when loading favicon
Jonathan Dong
Reported 2012-05-28 07:43:27 PDT
RIM PR: 160587 way to reproduce: if we try to load any site which needs http authentication, and when the authentication challenge pops up, we press cancel button to cancel the challenge, then the favicon loading will trigger the authentication challenge once again. root cause: favicon loading is triggered when the main resource has been loaded and parsed, so if we cancel the main resource loading, we should cancel the favicon loading as well.
Attachments
Patch (3.31 KB, patch)
2012-05-28 07:56 PDT, Jonathan Dong
no flags
Patch (3.34 KB, patch)
2012-05-28 18:36 PDT, Jonathan Dong
no flags
Jonathan Dong
Comment 1 2012-05-28 07:56:55 PDT
Rob Buis
Comment 2 2012-05-28 10:44:01 PDT
Comment on attachment 144360 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144360&action=review Ok. > Source/WebCore/ChangeLog:8 > + Provided the TargetType when generating a favicon loading Provide the TargetType > Source/WebCore/ChangeLog:9 > + request. Loading favicon is triggered after the main resource Loading favicons > Source/WebCore/ChangeLog:14 > + loading, which may confuse user. the user. > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:764 > + // The favicon loading is triggerred after the main resource has been loaded Typo: triggered > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:767 > + // load. If not we will receive another challenge which may confuse user. Slightly better: // and parsed, so if we cancel the authentication challenge when loading the main // resource, we should also cancel loading the favicon when it starts to // load. If not we will receive another challenge which may confuse the user.
Jonathan Dong
Comment 3 2012-05-28 18:36:32 PDT
WebKit Review Bot
Comment 4 2012-05-28 19:58:26 PDT
Comment on attachment 144418 [details] Patch Clearing flags on attachment: 144418 Committed r118716: <http://trac.webkit.org/changeset/118716>
WebKit Review Bot
Comment 5 2012-05-28 19:58:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.