[BlackBerry] http authentication challenge issue when loading favicon https://bugs.webkit.org/show_bug.cgi?id=87665

Patch by Jonathan Dong <jonathan.dong@torchmobile.com.cn> on 2012-05-28
Reviewed by Rob Buis.

Provide the TargetType when generating a favicon loading
request. Loading favicons is triggered after the main resource
has been loaded and parsed, so if we cancel the authentication
challenge when loading main resource, we should also cancel
loading the favicon when it starts to load. If not we will
receive another challenge after we canceled the main resource
loading, which may confuse the user.

Internally reviewed by Joe Mason <jmason@rim.com>

No new tests because of no behavior changes.

* loader/icon/IconLoader.cpp:
(WebCore::IconLoader::startLoading):
* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::sendRequestWithCredentials):

Canonical link: https://commits.webkit.org/105458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118716 268f45cc-cd09-0410-ab3c-d52691b4dbfc